--- a/app.properties
+++ b/app.properties
@@ -1,16 +1,16 @@
 # What's the name of this team?
-team.name = 'Team Name'
+team.name = 'Circle-41'
 
 # Which of the projects did the team decide to work on
 # put the name here. The name should be the name of one of the listed projects
 team.project = 'Phonie'
 
 # AltSchool name and email of the team lead/rep 
-lead.email = 'lol@gmail.com'
-lead.name = 'Lastname Firstname'
+lead.email = 'furiousfury43@gmail.com'
+lead.name = 'Akon Egbaoghene'
 
 # AltSchool name and email of the team members
 # names and emails are separated by | character and must follow the same sequence
 # e.g email-1 (the first email) should be the email for the person whose name comes first in the list of names
-members.emails = 'email-1 | email-2 | email-3'
-members.names = 'Lastname Firstname | Lastname Firstname | Lastname Firstname'
+members.emails = 'odukoyatobi37@gmail.com | oladipooluwasegun96@gmail.com | nnahify@gmail.com | majottolabode@gmail.com | zechirayjr@yahoo.com'
+members.names = 'Odukoya Tobiloba | Oladipo Oluwasegun | Nnah Ifeoma | Joshua Olabode |Ezechi Chekwube'
