--- a/app.properties
+++ b/app.properties
@@ -12,5 +12,5 @@ lead.name = 'Akon Egbaoghene'
 # AltSchool name and email of the team members
 # names and emails are separated by | character and must follow the same sequence
 # e.g email-1 (the first email) should be the email for the person whose name comes first in the list of names
-members.emails = 'odukoyatobi37@gmail.com | oladipooluwasegun96@gmail.com | nnahify@gmail.com | majottolabode@gmail.com | zechirayjr@yahoo.com'
-members.names = 'Odukoya Tobiloba | Oladipo Oluwasegun | Nnah Ifeoma | Joshua Olabode |Ezechi Chekwube'
+members.emails = 'odukoyatobi37@gmail.com | oladipooluwasegun96@gmail.com | nnahify@gmail.com | majottolabode@gmail.com | zechirayjr@yahoo.com | maxshred001@gmail.com'
+members.names = 'Odukoya Tobiloba | Oladipo Oluwasegun | Nnah Ifeoma | Joshua Olabode |Ezechi Chekwube | Oluwagbemi Emmanuel'
